fix some text overflow

--- a/app/assets/stylesheets/components/feeds.css.scss
+++ b/app/assets/stylesheets/components/feeds.css.scss
@@ -297,6 +297,13 @@
   a {
     color: $gray;
 
+    @media (max-width: $screen-xs-max) {
+      @include text-overflow;
+      display: inline-block;
+      max-width: 45px;
+      vertical-align: middle;
+    }
+
     &:hover {
       text-decoration: underline;
     }
