--- a/app/assets/stylesheets/components/misc.css.scss
+++ b/app/assets/stylesheets/components/misc.css.scss
@@ -64,10 +64,6 @@ i.fa_alone {
   }
 }
 
-.fa-trash-o {
-  color: $red;
-}
-
 .nomore {
   color: $text-muted;
   display: block;
